<resources>
    <string name="app_name" translatable="false">Oliweb</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="facebook_app_id" translatable="false">1556396067990675</string>
    <string name="facebook_application_id" translatable="false">1556396067990675</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1556396067990675</string>
    <string name="pref_default_number_car" translatable="false">100</string>
    <string name="pref_header_general">Général</string>
    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sort">
        <item>Prix le plus élevé en premier</item>
        <item>Prix le plus bas en premier</item>
        <item>Plus récent en premier</item>
        <item>Plus ancien en premier</item>
    </string-array>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="pref_title_ringtone">Sonnerie</string>
    <string name="image_detail_transition" translatable="false">IMAGE_DETAIL_TRANSITION</string>
    <string name="image_detail_transition_user" translatable="false">IMAGE_DETAIL_TRANSITION_USER</string>
    <string name="prix_detail_transition" translatable="false">PRIX_DETAIL_TRANSITION</string>
    <string name="titre_detail_transition" translatable="false">TITRE_DETAIL_TRANSITION</string>
    <string name="image_favorite_transition" translatable="false">IMAGE_FAVORITE_TRANSITION</string>
    <string name="image_share_transition" translatable="false">IMAGE_SHARE_TRANSITION</string>
    <string name="image_working_transition" translatable="false">image_working_transition</string>
    <string name="view_1_transition" translatable="false">view_1_transition</string>
    <string name="view_2_transition" translatable="false">view_2_transition</string>
    <string name="view_3_transition" translatable="false">view_3_transition</string>
    <string name="view_4_transition" translatable="false">view_4_transition</string>
    <string name="mon_profil">Mon profil</string>
    <string name="mes_annonces">Mes annonces</string>
    <string name="mes_favoris">Mes favoris</string>
    <string name="mes_informations">Mes informations</string>
    <string name="se_connecter">Se connecter</string>
    <string name="connexion">Connexion</string>
    <string name="param_tres">Paramètres</string>
    <string name="content_description_profile_image" translatable="false">content_description_profile_image</string>
    <string name="mes_conversations">Mes conversations</string>
    <string name="title_activity_chats">Mes conversations</string>
    <string name="image_profil_transition" translatable="false">image_profil_transition</string>
    <string name="description_slide_2">Il vous suffit de donner une description du bien à vendre, prendre une photo et poster votre annonce.</string>
    <string name="description_slide_3">Et grace aux liens dynamiques vous pourrez la partager à travers les réseaux sociaux.</string>
    <string name="sign_in_required">Un compte est requis</string>
    <string name="dynamic_link_creation">Création d\'un lien de partage</string>
    <string name="link_share_error">Une erreur n\'a pas permis le partage</string>
    <string name="connection_required_to_search">Une connexion est requise pour rechercher</string>
    <string name="error_cant_retrieve_phone_number">Numéro de téléphone impossible à récupérer</string>
    <string name="error_cant_retrieve_email">Email impossible à récupérer</string>
    <string name="error_no_mail_client_found">Pas de client mail installé</string>
    <string name="error_cant_make_phone_call">Impossible de téléphoner</string>
    <string name="activity_name_advanced_search">Recherche avancée</string>
    <string name="begin">Commencer</string>
    <string name="next">Suivant</string>
    <string name="IMPOSSIBLE_YOU_OWN_THIS_AD">Action impossible Cette annonce vous appartient</string>
    <string name="AD_REMOVE_FROM_FAVORITE">Annonce retirée des favoris</string>
    <string name="AD_ADD_TO_FAVORITE">Annonce ajoutée aux favoris</string>
    <string name="MY_FAVORITE">Mes favoris</string>
    <string name="RECENT_ADS">Dernières annonces</string>
    <string name="sell_easily">Vendez\nFacilement</string>
    <string name="skip">Passer</string>
    <string name="not_send">Non envoyé</string>
    <string name="default_mail_message">Bonjour, votre annonce m\'intéresse…</string>
    <string name="default_mail_chooser_title">Envoi d\'email…</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="sign_in">Se connecter</string>
    <string name="empty_my_annonces_list">Vous n\'avez encore posté aucune annonce. Appuyez sur le + pour saisir une annonce.</string>
    <string name="confirm_delete_annonce">Supprimer l\'annonce %s ?%n%nVous perdrez toutes les informations relatives à cette annonce (Chats, Messages).</string>
    <string name="empty_list">Vous n\'avez encore posté aucune annonce.\n Appuyez sur le + pour saisir une annonce.</string>
    <string name="action_impossible_own_this_annonce">Action impossible Cette annonce vous appartient</string>
    <string name="annonce_correctly_recorded_as_favorite">Annonce bien ajoutée aux favoris</string>
    <string name="annonce_remove_from_favorite">Annonce retirée des favoris</string>
    <string name="remove_from_favorite_failed">Suppression des favoris a échouée</string>
    <string name="dynamic_link_failed">Une erreur n\'a pas permis le partage</string>
    <string name="looking_for">Recherche</string>
    <string name="default_text_share_link">Hey, regarde cette petite annonce :</string>
    <string name="show_profile">Voir mon profil</string>
    <string name="welcome">Bienvenue sur Oliweb</string>
    <string name="nice_to_see_you">Content de vous revoir %s</string>
    <string name="network_unavailable">Réseau non disponible</string>
    <string name="no_favorites_at_this_time">Vous n\'avez ajouté aucune annonce à vos favoris pour le moment.</string>
    <string name="delete_photo">Supprimer une photo</string>
    <string name="delete_photo_are_you_sure">Etes vous sûr de vouloir supprimer la photo ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="add_new_photo">Ajouter une nouvelle photo</string>
    <string name="add_photo_question">Vous pouvez prendre une nouvelle photo ou choisir une photo existante depuis votre galerie.</string>
    <string name="take_new_picture">Prendre photo</string>
    <string name="choose_from_galery">Choisir dans la galerie</string>
    <string name="search">Recherche</string>
    <string name="advanced_search">Recherche avancée</string>
    <string name="answer">Répondre</string>
    <string name="search_error">Erreur dans la recherche</string>
    <string name="error_max_gte_min">Le maximum doit être supérieur au minimum</string>
    <string name="error_price_interval_incorrect">La fourchette de prix est incomplète</string>
    <string name="with_photo_only">Avec photos uniquement</string>
    <string name="categories">Catégories</string>
    <string name="price_between">Prix compris entre</string>
    <string name="keyword">Mots clés</string>
    <string name="maximum" translatable="false">Maximum</string>
    <string name="minimum" translatable="false">Minimum</string>
    <string name="and">et</string>
    <string name="keep_contact">Garder le contact</string>
    <string name="intro_3_tagline">Mail, Téléphone, Messagerie  C\'est vous qui choisissez le moyen de communication pour vous contacter</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="pref_title_vibrate">Vibreur</string>
    <string name="pref_ringtone_silent">Silencieux</string>
    <string name="intro_1_tagline">L\'application Android qui vous aide à gérer vos petites annonces</string>
    <string name="ads_found_on_network">Des annonces vous appartenant ont été trouvées sur le réseau.\n\nVoulez vous les récupérer sur cet appareil ?</string>
    <string name="ads">Annonces</string>
    <string name="chats">Conversations</string>
    <string name="messages">Messages</string>
    <string name="telephone">Telephone</string>
    <string name="empty_search_result">Votre recherche n\'a retourné aucun résultat. Essayer la recherche avancée pour pouvoir rentrer plus de paramètres.</string>
    <string name="post_an_ad">Ajouter une annonce</string>
    <string name="update_an_ad">Modifier une annonce</string>
    <string name="my_ads">Mes annonces</string>
    <string name="photos">Photos</string>
    <string name="categorie">Catégorie</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="price">Prix</string>
    <string name="contact_me">Contactez moi</string>
    <string name="by_message">Par message</string>
    <string name="by_telephone">Par téléphone</string>
    <string name="by_email">Par email</string>
    <string name="send_message">Envoyer un message</string>
    <string name="empty_message_list">Commencez à discuter avec le vendeur de ce bien en lui envoyant un message</string>
    <string name="AD_DONT_EXIST_ANYMORE">Cette annonce n\'existe plus</string>
    <string name="UPDATE_SUCCESSFUL">Mise à jour effectuée</string>
    <string name="pref_title_new_message_notifications">Notification de nouveau message</string>
    <string name="title_mandatory">Le titre est obligatoire.</string>
    <string name="description_madatory">La description est obligatoire.</string>
    <string name="price_mandatory">Le prix est obligatoire.</string>
    <string name="contact_mandatory">Un moyen de contact obligatoire</string>
    <string name="choose_image_to_upload">Choisissez les images à importer</string>
    <string name="nav_menu_item_suggestion" translatable="false">Suggestion</string>
</resources>