<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/mes_informations">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_grey_900_48dp"
                android:title="@string/mon_profil" />
            <item
                android:id="@+id/nav_annonces"
                android:icon="@drawable/ic_assistant_photo_grey_900_48dp"
                android:title="@string/mes_annonces"
                app:actionViewClass="android.widget.TextView" />
            <item
                android:id="@+id/nav_chats"
                android:icon="@drawable/ic_message_grey_900_48dp"
                android:title="@string/mes_conversations"
                app:actionViewClass="android.widget.TextView" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_favorite_grey_900_48dp"
                android:title="@string/mes_favoris"
                app:actionViewClass="android.widget.TextView" />
        </menu>
    </item>

    <group
        android:id="@+id/grp1">
        <item
            android:id="@+id/nav_advanced_search"
            android:icon="@drawable/ic_zoom_in_grey_900_48dp"
            android:title="@string/advanced_search" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey_900_48dp"
            android:title="@string/param_tres" />

        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_power_settings_new_grey_900_48dp"
            android:title="@string/se_connecter" />
    </group>
    <group
        android:id="@+id/grp2">
        <item
            android:id="@+id/nav_suggestion"
            android:icon="@drawable/ic_help_grey_900_48dp"
            android:title="@string/nav_menu_item_suggestion" />
    </group>

</menu>
