<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oliweb.nc.oliweb.ui.activity.AdvancedSearchActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_advanced_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingBottom="80dp">

            <TextView
                android:id="@+id/text_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:gravity="center_vertical|start"
                android:text="@string/categories"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/button_add_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description_keyword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_add_category"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_background"
                android:text="Choisir"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/text_categories"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_categories" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="6dp"
                app:layout_constraintEnd_toStartOf="@id/button_add_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_categories"
                app:singleLine="false">

                <!-- Chips can be declared here, or added dynamically. -->

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/text_description_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Sélectionner les catégories dans lesquelles vous voulez effectuer votre recherche"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chips_group" />

            <TextView
                android:id="@+id/with_photos_only"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/with_photo_only"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description_category" />

            <TextView
                android:id="@+id/text_description_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Cochez pour ne rechercher que les annonces avec photos"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/with_photos_only" />

            <CheckBox
                android:id="@+id/photo_switch"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@id/with_photos_only"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/with_photos_only" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_keywords"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/keyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/keyword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_description_keyword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Les mots clés nécessaires"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_layout_keywords" />

            <TextView
                android:id="@+id/text_price_between"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/price_between"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_description_photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_minimum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/text_and"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_price_between">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lower_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/minimum"
                    android:inputType="number"
                    android:maxLength="9" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_and"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/and"
                app:layout_constraintBottom_toBottomOf="@id/text_layout_minimum"
                app:layout_constraintEnd_toStartOf="@id/text_layout_maximum"
                app:layout_constraintStart_toEndOf="@id/text_layout_minimum"
                app:layout_constraintTop_toBottomOf="@id/text_price_between" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout_maximum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_and"
                app:layout_constraintTop_toBottomOf="@id/text_price_between">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/higher_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/maximum"
                    android:inputType="number"
                    android:maxLength="9" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_description_prix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Définissez un interval de prix"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_layout_minimum" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fab_advanced_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_zoom_in_white_24dp"
        android:text="@string/search"
        android:textColor="@android:color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>